--- a/app/views/session/forget_password.html.erb
+++ b/app/views/session/forget_password.html.erb
@@ -1,4 +1,52 @@
-<%= form_tag("/session/reset_password", method: "post") do %>
-<%= text_field_tag :email,  params[:email] %>
- <button class="btn btn-custom">Reset</button>
-<% end %>
+ 
+
+<body data-gr-c-s-loaded="true">
+        <div class="login-container">
+            <div class="left-section"></div>
+            <div class="right-section">
+                <div class="logo-section">
+                    <a href="/"><img alt="logo" src="/assets/login-logo-ee82b9552305f2f1570dfdcd1abee04e2c61734fe756dd3dd40bd2a512b532e2.svg"></a>
+                </div>
+
+                <div class="form-section">
+
+                  <ul class="nav nav-tabs" role="tablist">
+<li role="presentation" class="active"><a href="#forgotpassword" aria-controls="signin" role="tab" data-toggle="tab">Forgot Password</a></li>
+</ul>
+<div class="tab-content">
+    <div role="tabpanel" class="tab-pane active" id="signin">
+
+        <form class="form-horizontal" id="new_user" action="/users/password" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="/MhnBQ7zi6v05vVeoAChO09cc/cwAQzcxzKEkztHB0wIuUSqWJYUCDDfqbVnxwBVns3K2OKCQFYh1Yz4q5DErg==">
+
+        <div class="form-group">
+            <div class="col-xs-12">
+              Please enter your email address and we will send you instructions to reset your password
+            </div>
+        </div>
+
+        
+
+
+
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input autocomplete="email" class="form-control email-filed" id="inputEmail3" placeholder="Email Address" required="required" type="email" value="" name="user[email]">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input type="submit" name="commit" value="Reset Password" class="btn btn-default login-btn" data-disable-with="Reset Password">
+            </div>
+        </div>
+</form>
+</div>
+<div class="forgot-footer">
+<a href="/session/index">Back to Login Page</a>
+</div>
+</div>
+
+                </div>
+          </div>
+      </div>
+  </body>
