--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -290,7 +290,7 @@ ol, ul {
     width: 100%;
 }
 .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
-    float: left;
+    /*float: left;*/
 }
 .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
      position: relative; 
@@ -299,3 +299,41 @@ ol, ul {
     /* padding-left: 15px; */
 }
 
+@media (max-width: 767px)
+.login-container .right-section .logo-section {
+    position: fixed;
+    margin-top: 0;
+    background: #fff;
+    padding: 8px 0;
+    height: 70px;
+}
+@media (max-width: 767px)
+.login-container .left-section {
+    width: 100%;
+    float: top;
+    height: 150px;
+    margin-top: 70px;
+}
+@media (max-width: 767px)
+.login-container .right-section {
+     width: 100%; 
+     float: left; 
+     padding: 5px 15px 0px 15px; 
+}
+.login-container .login-btn {
+    width: 80%;
+    background: #6ebf5d;
+    color: #fff;
+    font-size: 15px;
+    font-family: 'helvetica_neue_lt_std65Md';
+    border-color: #6ebf5d;
+    border-radius: 25px;
+    padding: 10px 15px;
+    margin-top: 10px;
+    text-transform: uppercase;
+}
+.btn-default {
+    color: #333;
+    background-color: #fff;
+    border-color: #ccc;
+}
