--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"
+    <meta charset="utf-8" />
+
+    <meta name="author" content="Script Tutorials" />
+
+    <meta name="description" content="Responsive Websites Using BootStrap - demo page">
+
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>CmsDeviceApp</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
