--- a/app/views/session/register.html.erb
+++ b/app/views/session/register.html.erb
@@ -18,49 +18,53 @@
                     </ul>
 
                   
-    <div class="tab-content">
-        <div role="tabpanel" class="tab-pane active" id="signin">
+<div class="tab-content">
+  <div role="tabpanel" class="tab-pane active" id="signin">
 
-<form class="form-horizontal" id="new_user" action="/users" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="MLyn2zNFJ3H1+UrpmM+XrE/Mj0VQ5KaYnSpVo5hpKBftIWL+LMhexnqqsAzqT10SBY5UgbzNjyNsgOrL8ubnCw==">
-
-<div class="form-group">
-    <div class="col-xs-12">
-        <input class="form-control email-filed" placeholder="First Name" type="text" name="user[first_name]" id="user_first_name">
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-        <input class="form-control email-filed" placeholder="Last Name" type="text" name="user[last_name]" id="user_last_name">
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-        <input class="form-control msg-filed" placeholder="Email Address" type="email" value="" name="user[email]" id="user_email">
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-        <input class="form-control password-filed" placeholder="Password" type="password" name="user[password]" id="user_password">
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-          <input class="form-control password-filed" placeholder="Confirm Password" type="password" name="user[password_confirmation]" id="user_password_confirmation">
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-        <div class="checkbox">
-            <input name="user[terms_of_service]" type="hidden" value="0"><input id="tc1" type="checkbox" value="1" name="user[terms_of_service]">
-            <label for="tc1">I accept <a target="_blank" href="/terms">Terms &amp; Conditions</a></label>
+    <form class="form-horizontal" id="new_user" accept-charset="UTF-8" method="post" action="/session/create_register" >
+    
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input class="form-control email-filed" placeholder="First Name" type="text" name="user[first_name]" id="user_first_name">
+            </div>
         </div>
-    </div>
-</div>
-<div class="form-group">
-    <div class="col-xs-12">
-        <button type="submit" class="btn btn-default login-btn">Sign Up</button>
-    </div>
-</div>
-</form></div>
-
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input class="form-control email-filed" placeholder="Last Name" type="text" name="user[last_name]" id="user_last_name">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input class="form-control msg-filed" placeholder="Email Address" type="email" value="" name="user[email]" id="user_email">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                <input class="form-control password-filed" placeholder="Password" type="password" name="user[password]" id="user_password">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                  <input class="form-control password-filed" placeholder="Confirm Password" type="password" name="user[password_confirmation]" id="user_password_confirmation">
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                <div class="checkbox">
+                    <input name="user[terms_of_service]" type="hidden" value="0"><input id="tc1" type="checkbox" value="1" name="user[terms_of_service]">
+                    <label for="tc1">I accept <a target="_blank" href="/terms">Terms &amp; Conditions</a></label>
                 </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-xs-12">
+                <button type="submit" class="btn btn-default login-btn">Sign Up</button>
+            </div>
+        </div>
+    </form>
+</div>
+   </div>
+ </div>
+</div>
+ </div>
+</body>
