forget password modified

--- a/app/views/session/forget_password.html.erb
+++ b/app/views/session/forget_password.html.erb
@@ -16,10 +16,12 @@
 <div class="tab-content">
     <div role="tabpanel" class="tab-pane active" id="signin">
 
-        <form class="form-horizontal" id="new_user" action="/users/password" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="/MhnBQ7zi6v05vVeoAChO09cc/cwAQzcxzKEkztHB0wIuUSqWJYUCDDfqbVnxwBVns3K2OKCQFYh1Yz4q5DErg==">
+        <form class="form-horizontal" id="new_user" action="/session/reset_password" accept-charset="UTF-8" method="post"><input name="utf8" type="hidden" value="✓"><input type="hidden" name="authenticity_token" value="/MhnBQ7zi6v05vVeoAChO09cc/cwAQzcxzKEkztHB0wIuUSqWJYUCDDfqbVnxwBVns3K2OKCQFYh1Yz4q5DErg==">
 
         <div class="form-group">
             <div class="col-xs-12">
+
+
               Please enter your email address and we will send you instructions to reset your password
             </div>
         </div>
