--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -176,6 +176,38 @@ input.form-control {
     /* padding-right: 15px; */
     padding-left: 15px;
 }
+
+input[type=checkbox] + label {
+        padding-left: 20px;
+}
+
+
+.login-container input.form-control {
+     border: 0; 
+     border-radius: 0; 
+     border-bottom: 1px solid #d7d7d7; 
+     -webkit-box-shadow: none; 
+     box-shadow: none; 
+     background-repeat: no-repeat; 
+     background-position: 8px center; 
+     height: 48px; 
+     padding-left: 50px; 
+     width: 100%;
+}
+input.form-control {
+    height: 48px;
+    background-color: transparent;
+    border: 0;
+    border-bottom: 1px solid #b7b7b7;
+    border-radius: 0;
+    -webkit-box-shadow: none;
+    /* box-shadow: none; */
+    /* font-size: 15px; */
+    /* color: #4b4c4f; */
+    background-repeat: no-repeat;
+    background-position: 8px center;
+}
+
 @media (max-width: 767px)
 .login-container .left-section {
     width: 100%;
