--- a/app/views/session/index.html.erb
+++ b/app/views/session/index.html.erb
@@ -40,7 +40,7 @@
                     </div>
                     <div class="form-group">
                       <div class="col-xs-12">
-                        <button name="button" class="btn btn-default login-btn", onclick="return create_session();">Sign in</button>
+                        <button name="button" class="btn btn-default login-btn" >Sign in</button>
                       </div>
                     </div>
                   </form> 
