--- a/app/views/session/register.html.erb
+++ b/app/views/session/register.html.erb
@@ -19,7 +19,7 @@
 
                   
 <div class="tab-content">
-  <div role="tabpanel" class="tab-pane active" id="signin">
+  <div role="tabpanel" class="tab-pane active" id="signup">
 
     <form class="form-horizontal" id="new_user" accept-charset="UTF-8" method="post" action="/session/create_register" >
     
