--- a/app/views/devices/new.html.erb
+++ b/app/views/devices/new.html.erb
@@ -1,19 +1,90 @@
-<div class="top-panel">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <div class="page-title">Device Management</div>
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <div class="page-breadcrumbs">
-          <ul>
-            <li><a href="#">Devices</a></li>
-            <li>IOT Hub Scinap</li>
-          </ul>
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/devices"><img alt="logo" src="/assets/inner-logo-880c6413d3f20851c5842073bfc3a85a549462d9c39771dc4122d3eaf1376947.svg"></a>
         </div>
+        <div id="navbar" class="collapse navbar-collapse">
+           <ul class="nav navbar-nav navbar-left navbar-top-links">
+                <li class="active">
+                  <a href="/devices">
+                    <i class="device-icon"></i>
+                    Devices
+                  </a> 
+                </li>
+                <li class="">
+                  <a href="/templates">
+                    <i class="template-icon"></i>
+                    Templates
+                  </a>
+                </li>
+                <li class="">
+                  <a href="/help">
+                    <i class="help-icon"></i>
+                    Help
+                  </a>
+                </li>
+            </ul>
+
+
+            <!-- /.navbar-top-links -->
+        </div>
+        <ul class="nav navbar-right navbar-top-links">
+            <li class="userdp dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                    <span class="user-profile">
+                      <img src="/assets/missing_user.png" alt="Missing user">
+                    </span>
+                    <b class="caret"></b>
+                </a>
+                <ul class="dropdown-menu dropdown-user">
+                    <li>
+
+                        <a href="/users/edit">
+                          <i class="fa fa-user fa-fw"></i>
+                          User Profile</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa fa-gear fa-fw"></i>
+                            Settings</a>
+                    </li>
+                    <li class="divider"></li>
+                    <li>
+                        <a rel="nofollow" href="/session/index">
+                        <i class="fa fa-sign-out fa-fw"></i>
+                        Logout
+                        </a>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+</div>
+</nav>
+
+<div class="main-wrapper">
+            <div class="alert-success device-alert-message"></div>
+<div class="top-panel">
+   <div class="container-fluid">
+      <div class="row">
+          <div class="col-xs-12 col-sm-6">
+              <div class="page-title">Device Management</div>
+          </div>
+          <div class="col-xs-12 col-sm-6">
+              <div class="page-breadcrumbs">
+                 <ul>
+                    <li><a href="#">Devices</a></li>
+                    <li>IOT Hub Scinap</li>
+                 </ul>
+              </div>
+          </div>
       </div>
-    </div>
-  </div>
+   </div>
 </div>
 <div class="middle-container">
   <div class="container-fluid">
@@ -36,12 +107,12 @@
                       <th></th>
                     </tr>
                   </thead>
-                  <tbody style="height:175px;">
+                  <tbody style="height:100px;">
                     <% @devices.each do |device| %>
                       <tr>
                         <td><%= device.name %></td>
-                        <td><%= device.template.name %></td>
-                        <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %></td>
+                        <td><%= device.template.try(:name) %></td>
+                        <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %><%= link_to image_tag('delete-icon.svg') %></td>
                       </tr>
                     <% end %>
                   </tbody>
