--- a/app/views/templates/index.html.erb
+++ b/app/views/templates/index.html.erb
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"><img alt="logo" src="/assets/inner-logo-880c6413d3f20851c5842073bfc3a85a549462d9c39771dc4122d3eaf1376947.svg"></a>
+            <a class="navbar-brand" href="/devices"><img alt="logo" src="/assets/inner-logo-880c6413d3f20851c5842073bfc3a85a549462d9c39771dc4122d3eaf1376947.svg"></a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
            <ul class="nav navbar-nav navbar-left navbar-top-links">
