--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -258,3 +258,10 @@ p {
     padding-right: 15px;
     padding-left: 15px;
 }
+/*for devices new form*/
+
+@media (min-width: 768px){
+.col-sm-6 {
+    width: 50%;
+    }
+}
