device create action created

--- a/app/views/devices/_device_form.html.erb
+++ b/app/views/devices/_device_form.html.erb
@@ -1,11 +1,5 @@
 <div class="panel-box">
-  <div class="panel-head">
-    <% if device.persisted? %>
-        <h2>Update Device</h2>
-    <% else %>
-        <h2>Create Device</h2>
-    <% end %>
-  </div>
+  <div class="panel-head"></div>
   <div class="dc-management-form">
     <%= form_for(device, html: {class: 'form-horizontal', multipart: true}) do |f| %>
         <div class="form-group">
@@ -14,36 +8,115 @@
               <div class="col-xs-12 mb-15">
                 <%= f.text_field :name, class: 'form-control', placeholder: 'Device Name Here', required: true %>
               </div>
-              <div class="col-xs-12">
-                <div class="custom-dropdown dm">
-                </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :id_code, class: 'form-control', placeholder: 'Device ID Code Here', required: true %>
               </div>
             </div>
           </div>
           <div class="col-xs-12 col-sm-6 mb-xs-15">
             <div class="row">
               <div class="col-xs-12 mb-15">
-                <%= f.text_field :interfaces_peripherals, class: 'form-control roundscroll', placeholder: "Interfaces and Peripherals", required: true %>
-              </div>
-              <div class="col-xs-12">
-                <div class="file-upload">
-                  <div class="file-select">
-                    <div class="file-select-name  device-image">Upload Device Image</div>
-                    <%= f.file_field :image %>
-                    <div class="imageupload device-image">
-                      <div class="file-tab panel-body">
-                        <label class="btn btn-default btn-file">
-                          <span>Browse</span>
-                        </label>
-                      </div>
-                    </div>
-                  </div>
-                </div>
+                <%= f.text_field :id_communication, class: 'form-control', placeholder: 'Device ID Communication Here', required: true %>
               </div>
             </div>
           </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :location, class: 'form-control', placeholder: 'Device location Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :latitude, class: 'form-control', placeholder: 'Device latitude Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :longitude, class: 'form-control', placeholder: 'Device longitude Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :altitude, class: 'form-control', placeholder: 'Device altitude Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :date_installation, class: 'form-control', placeholder: 'Device Date Installation Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :circuit_number, class: 'form-control', placeholder: 'Device Circuit Number Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :name_street, class: 'form-control', placeholder: 'Device Name Street Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :number_street, class: 'form-control', placeholder: 'Device Number Street Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :power_installed, class: 'form-control', placeholder: 'Device Power Installed Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :power_contracted, class: 'form-control', placeholder: 'Device Power Contracted Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :id_supply_contract, class: 'form-control', placeholder: 'Deviceid Supply Contract Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :clock_brand, class: 'form-control', placeholder: 'Device Clock Brand Here', required: true %>
+              </div>
+            </div>
+          </div>
+          <div class="col-xs-12 col-sm-6 mb-xs-15">
+            <div class="row">
+              <div class="col-xs-12 mb-15">
+                <%= f.text_field :clock_model, class: 'form-control', placeholder: 'Device Clock Model Here', required: true %>
+              </div>
+            </div>
+          </div>
+        </div>
           <div class="form-group">
-
             <div class="col-xs-12 text-center">
               <%= f.hidden_field :user_id, value: session[:user_id] %>
               <button type="submit" class="btn submit-btn-green device-submit">Submit</button>
