--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -43,7 +43,6 @@
     <div class="container-fluid">
       <div class="row">
         <div class="col-xs-12 col-sm-12">
-          <!-- Nav tabs -->
           <ul class="nav nav-tabs" role="tablist">
               <li role="presentation" class="active js-device-li">
                 <a aria-controls="globalview" role="tab" data-toggle="tab" class="js-device-tab" href="#">Managment</a>
@@ -52,17 +51,45 @@
                 <a aria-controls="mqttclient" role="tab" data-toggle="tab" class="js-device-tab" href="">MQTT Client</a>
               </li>
           </ul>
-          
-          <div class="tab-content" id="deviceTabs">
-            
-          </div>
-            <div role="tabpanel" class="tab-pane" id="mqttclient">
-              
-            </div>
-        </div>
+       </div>
       </div>
     </div>
   </div>
 </div>
-<div class="clear"></div>
+<div class="middle-container">
+<% if @devices.present? %>
 
+  <div class="col-xs-12 col-sm-12">
+          <div class="panel-box">
+            <div class="panel-head">
+              <h2>Devices</h2>
+            </div>
+            <div class="device-detail-table">
+              <div class="table-responsive">
+                <table class="table table-striped fixed_headers three-column">
+                  <thead>
+                    <tr>
+                      <th>Device Name</th>
+                      <th>Device Id Code</th>
+                      <th>Device Id Communication</th>
+                      <th>Device Date Installation</th>
+                    </tr>
+                  </thead>
+                  <tbody style="height:100px;">
+                    <% @devices.each do |device| %>
+                      <tr>
+                        <td><%= device.name %></td>
+                        <td><%= device.id_code %></td>
+                        <td><%= device.id_communication %></td>
+                        <td><%= device.date_installation %></td>
+                        <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %><%= link_to image_tag('delete-icon.svg') %></td>
+                      </tr>
+                    <% end %>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+        </div>
+ </div>
+<% end %>
