edit action performed

--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -58,7 +58,6 @@
 </div>
 <div class="middle-container">
 <% if @devices.present? %>
-
   <div class="col-xs-12 col-sm-12">
           <div class="panel-box">
             <div class="panel-head">
@@ -66,7 +65,7 @@
             </div>
             <div class="device-detail-table">
               <div class="table-responsive">
-                <table class="table table-striped fixed_headers three-column">
+                <table class="table table-striped ">
                   <thead>
                     <tr>
                       <th>Device Name</th>
@@ -91,5 +90,5 @@
             </div>
           </div>
         </div>
- </div>
+  </div>
 <% end %>
