--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -81,7 +81,10 @@
                         <td><%= device.id_code %></td>
                         <td><%= device.id_communication %></td>
                         <td><%= device.date_installation %></td>
-                        <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %><%= link_to image_tag('delete-icon.svg') %></td>
+                        <td><%= link_to image_tag('edit-icon.svg'), edit_device_path(id: device.id) %>
+                        <!--   <%= link_to image_tag('delete-icon.svg'), device_path(device.id), :method => :delete %>
+                            --> 
+                          </td>
                       </tr>
                     <% end %>
                   </tbody>
