--- a/app/views/devices/index.html.erb
+++ b/app/views/devices/index.html.erb
@@ -44,12 +44,8 @@
       <div class="row">
         <div class="col-xs-12 col-sm-12">
           <ul class="nav nav-tabs" role="tablist">
-              <li role="presentation" class="active js-device-li">
-                <a aria-controls="globalview" role="tab" data-toggle="tab" class="js-device-tab" href="#">Managment</a>
-              </li>
-              <li role="presentation" class=" js-device-li">
-                <a aria-controls="mqttclient" role="tab" data-toggle="tab" class="js-device-tab" href="">MQTT Client</a>
-              </li>
+              <button type="button" class="btn btn-link btn-md" data-toggle="modal" data-target="#myModal">Managment</button>
+              <button type="button" class="btn btn-link btn-md" data-toggle="modal" data-target="#m">MQTT Client</button>
           </ul>
        </div>
       </div>
@@ -95,3 +91,17 @@
         </div>
   </div>
 <% end %>
+
+<div class="modal fade" id="myModal" role="dialog">
+  <div class="modal-dialog modal-sm">
+    <div class="modal-content">
+      <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <h4 class="modal-title">Please select an action</h4>
+      </div>
+      <div class="modal-body">
+        <%= button_to 'Create a Device', new_device_path, method: :get, class: "btn btn-success" %>
+      </div>
+    </div>
+  </div>
+</div>
